updating my files

--- a/lab06-saad/cookiesstandtry/sales.html
+++ b/lab06-saad/cookiesstandtry/sales.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SalmonCookies</title>
     <style>
-     body {
-         color :crimson ;
-         background-color: #000;
-     }
-
+        body {
+            color: crimson;
+            background-color: #000;
+        }
+        ul {
+            font-size: 18px;
+        }
     </style>
 </head>
+  
 <body>
    <header>
        <h1>SADOUN-DHIRAT</h1>
    </header>
    <main class="page">
-      
+       <p>adding constructor function to my code & make atable to show the output for each location</p>
+       <div id="show-output">
+        
+
+
+       </div>
    </main>
    <footer>
        <h4>main-project by SADOUN-DHIRAT</h4>
